# Order-Flow-Automation

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json
apps/api/src/orderflow_api/: __init__.py  auth.py  cache.py  cli.py  config.py  db.py  logging.py  main.py
apps/api/src/orderflow_api/models/: __init__.py  user.py
apps/api/src/orderflow_api/routers/: feed.py  health.py  ingest.py  me.py  orderbook.py
apps/api/src/orderflow_api/services/: registry.py
apps/api/src/orderflow_api/services/orderbook/: __init__.py  book.py  events.py  metrics.py
apps/nt-bridge/Indicators/: OrderFlowBridge_Claude_V1.cs
docs/: architecture.md  deployment.md  nt_bridge_setup.md  replay.md
tests/: conftest.py
tests/unit/: test_auth.py  test_config.py  test_endpoints_ingest.py  test_endpoints_orderbook.py  test_health.py  test_instruments.py  test_metrics.py  test_orderbook.py  test_replay_sink_http.py  test_replay_synthetic.py  test_risk_templates.py
