[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderflow-automation"
version = "0.1.0"
description = "AI-assisted order flow analysis and execution for prop futures + Schwab equities"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "httpx>=0.28.0,<1.0.0",
  "structlog>=24.4.0,<25.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "redis>=5.2.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "fakeredis>=2.26.0,<3.0.0",
  "anyio>=4.6.0,<5.0.0",
]

[project.scripts]
orderflow = "orderflow_api.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["apps/api/src", "packages/shared/src"]

[tool.pytest.ini_options]
pythonpath = [
  "apps/api/src",
  "packages/shared/src",
]
testpaths = ["tests"]
addopts = "-p no:cacheprovider -ra"
